--- a/app/algom-inside_results.html
+++ b/app/algom-inside_results.html
@@ -109,7 +109,7 @@
                         <!-- /single-post__themes -->
 
                         <ul>
-                            <li>Боль в переднем отделе стопы (метатарзалгия), стрессовый перелом костей плюсны и болезнь Мортона, встречающиеся в основном у взрослых: см. </li>
+                            <li>Боль в переднем отделе стопы (метатарзалгия), стрессовый перелом костей плюсны и болезнь Мортона, встречающиеся в основном у взрослых: см. <span class="single-post__footnote">1</span></li>
                             <li>Вальгусная деформация большого пальца стопы: см. <span class="single-post__footnote">2</span></li>
                         </ul>
                         <h2>Болезнь Келлера I</h2>
@@ -205,89 +205,89 @@
                         <!-- search-results -->
                         <div class="search-results">
 
-                        <!-- search-results__categories -->
-                        <div class="search-results__categories">
-                        <div>
+                            <!-- search-results__categories -->
+                            <div class="search-results__categories">
+                                <div>
 
-                        <div class="active">Все результаты <span class="search-results__categories-num">12</span></div>
-                        <div class="active">Рекомендации АЛГОМ  <span class="search-results__categories-num">12</span></div>
-                        <div>EBM Guidelines <span class="search-results__categories-num">0</span></div>
-                        <div>Фото и рисунки <span class="search-results__categories-num">0</span></div>
+                                    <a href="#" class="active">Все результаты <span class="search-results__categories-num">12</span></a>
+                                    <a href="#" class="active">Рекомендации АЛГОМ  <span class="search-results__categories-num">12</span></a>
+                                    <a href="#">EBM Guidelines <span class="search-results__categories-num">0</span></a>
+                                    <a href="#">Фото и рисунки <span class="search-results__categories-num">0</span></a>
 
-                        </div>
-                        <div>
+                                </div>
+                                <div>
 
-                        <div>Резюме доказательств <span class="search-results__categories-num">0</span></div>
-                        <div>Аудиозаписи <span class="search-results__categories-num">0</span></div>
-                        <div>Видеозаписи <span class="search-results__categories-num">0</span></div>
-                        <div>Калькуляторы и анкеты <span class="search-results__categories-num">0</span></div>
+                                    <a href="#">Резюме доказательств <span class="search-results__categories-num">0</span></a>
+                                    <a href="#">Аудиозаписи <span class="search-results__categories-num">0</span></a>
+                                    <a href="#">Видеозаписи <span class="search-results__categories-num">0</span></a>
+                                    <a href="#">Калькуляторы и анкеты <span class="search-results__categories-num">0</span></a>
 
-                        </div>
-                        </div>
-                        <!-- /search-results__categories -->
+                                </div>
+                            </div>
+                            <!-- /search-results__categories -->
 
-                        <!-- search-results__articles -->
-                        <div class="search-results__articles">
-                        <h2>Основные статьи <span class="search-results__articles-num">2</span></h2>
-                        <h3>EBM Guidelines Russian</h3>
-                        <ul>
-                        <li>
-                        <a href="#">Заложенность носа</a>
-                        </li>
-                        <li>
-                        <a href="#">Атрофический ринит и озена</a>
-                        </li>
-                        </ul>
-                        </div>
-                        <!-- /search-results__articles -->
+                            <!-- search-results__articles -->
+                            <div class="search-results__articles">
+                                <h2>Основные статьи <span class="search-results__articles-num">2</span></h2>
+                                <h3>EBM Guidelines Russian</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Заложенность носа</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Атрофический ринит и озена</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- /search-results__articles -->
 
-                        <!-- search-results__articles -->
-                        <div class="search-results__articles">
-                        <h2>Дополнительные статьи <span class="search-results__articles-num">1</span></h2>
-                        <h3>EBM Guidelines Russian</h3>
-                        <ul>
-                        <li>
-                        <a href="#">Реплантация ампутированной конечности иличасти тела</a>
-                        </li>
-                        </ul>
-                        </div>
-                        <!-- /search-results__articles -->
+                            <!-- search-results__articles -->
+                            <div class="search-results__articles">
+                                <h2>Дополнительные статьи <span class="search-results__articles-num">1</span></h2>
+                                <h3>EBM Guidelines Russian</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#">Реплантация ампутированной конечности иличасти тела</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- /search-results__articles -->
 
-                        <!-- search-results__articles -->
-                        <div class="search-results__articles">
-                        <h2>Дополнительные статьи <span class="search-results__articles-num">9</span></h2>
-                        <h3>EBM Guidelines Russian</h3>
-                        <ul>
-                        <li>
-                        <a href="#"> Обструктивное апноэ сна у взрослых</a>
-                        </li>
-                        <li>
-                        <a href="#">Сердечно-легочная реанимация (СЛР)</a>
-                        </li>
-                        <li>
-                        <a href="#">Лечение отравлений</a>
-                        </li>
-                        <li>
-                        <a href="#">Грудное вскармливание: рекомендации и трудности</a>
-                        </li>
-                        <li>
-                        <a href="#">Профилактические осмотры в детской поликлинике</a>
-                        </li>
-                        <li>
-                        <a href="#">Аллергический ринит у детей</a>
-                        </li>
-                        <li>
-                        <a href="#">Тик в детском возрасте</a>
-                        </li>
-                        <li>
-                        <a href="#">Боковой амиотрофический склероз (БАС)</a>
-                        </li>
-                        <li>
-                        <a href="#">Периферический паралич лицевого нерва</a>
-                        </li>
-                        </ul>
-                        </div>
-                        <!-- /search-results__articles -->
+                            <!-- search-results__articles -->
+                            <div class="search-results__articles">
+                                <h2>Дополнительные статьи <span class="search-results__articles-num">9</span></h2>
+                                <h3>EBM Guidelines Russian</h3>
+                                <ul>
+                                    <li>
+                                        <a href="#"> Обструктивное апноэ сна у взрослых</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Сердечно-легочная реанимация (СЛР)</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Лечение отравлений</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Грудное вскармливание: рекомендации и трудности</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Профилактические осмотры в детской поликлинике</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Аллергический ринит у детей</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Тик в детском возрасте</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Боковой амиотрофический склероз (БАС)</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Периферический паралич лицевого нерва</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- /search-results__articles -->
 
                         </div>
                         <!-- /search-results -->
