new tasks has done

--- a/app/algom-subscription.html
+++ b/app/algom-subscription.html
@@ -92,13 +92,13 @@
 
                             <div>
                                 <fieldset class="nice-radio">
-                                    <input id="num1" name="group1" type="radio">
+                                    <input id="num1" name="group1" value="0" type="radio" required>
                                     <label for="num1">Физическое лицо</label>
                                 </fieldset>
                             </div>
                             <div>
                                 <fieldset class="nice-radio">
-                                    <input id="num2" name="group1" type="radio">
+                                    <input id="num2" name="group1" value="1" type="radio" required>
                                     <label for="num2">Юридическое лицо</label>
                                 </fieldset>
                             </div>
