new tasks has done

--- a/app/algom-demo1.html
+++ b/app/algom-demo1.html
@@ -28,13 +28,13 @@
             <div class="site__header-layout">
 
                 <a href="#" class="logo">
-                    <img src="img/logo.png" width="628" height="76" alt="">
+                    <img src="img/logo.png" width="245" height="38" alt="">
                 </a>
 
                 <!-- site__header-cooperation -->
                 <div class="site__header-cooperation">
 
-                    <span>В сотрудничестве с</span>
+                    <span>В сотрудничестве</span>
 
                     <div><img src="pic/company1.png" width="154" height="18" alt=""></div>
                     <div><img src="pic/company2.png" width="114" height="44" alt=""></div>
