--- a/app/algom-inside_results.html
+++ b/app/algom-inside_results.html
@@ -17,9 +17,6 @@
     <!-- site -->
     <div class="site">
 
-        <a href="#" class="site__print"><span>Распечатать</span></a>
-        <a href="#" class="site__download"><span>Скачать PDF</span></a>
-
         <!-- site__header -->
         <header class="site__header">
 
@@ -33,7 +30,7 @@
                 <!-- site__header-cooperation -->
                 <div class="site__header-cooperation">
 
-                    <span>В сотрудничестве с</span>
+                    <span>в сотрудничестве</span>
 
                     <div><img src="pic/company1.png" width="154" height="18" alt=""></div>
                     <div><img src="pic/company2.png" width="114" height="44" alt=""></div>
@@ -71,6 +68,13 @@
 
                 <!-- content -->
                 <div class="content">
+
+                    <!-- site__buttons -->
+                    <div class="site__buttons">
+                        <a href="#" class="site__print"><span>Распечатать</span></a>
+                        <a href="#" class="site__download"><span>Скачать PDF</span></a>
+                    </div>
+                    <!-- /site__buttons -->
 
                     <!-- single-post -->
                     <article class="single-post">
@@ -171,7 +175,7 @@
                         <a href="#" class="site__aside-hide">Скрыть меню</a>
 
                         <!-- search -->
-                        <form action="#" class="search" data-action="php/search.php">
+                        <form action="#" class="search has-result" data-action="php/search.php">
                             <a href="#" class="search__history">История поиска</a>
 
                             <!-- search__field -->
@@ -201,6 +205,16 @@
 
                         </form>
                         <!-- /search -->
+
+                        <!-- search-count -->
+                        <div class="search-count">
+                            <span>Найдено 22 результата поиска</span>
+                            <a href="#" class="search-count__show-results">
+                                <span>Развернуть</span>
+                                <span>Свернуть</span>
+                            </a>
+                        </div>
+                        <!-- /search-count -->
 
                         <!-- search-results -->
                         <div class="search-results">
@@ -293,10 +307,20 @@
                         <!-- /search-results -->
 
                     </div>
-
+                    <div class="social-list">
+                        <a href="https://vk.com/algomru" target="_blank" class="vk"></a>
+                        <a href="https://www.facebook.com/algomru/" target="_blank" class="fb"></a>
+                        <a href="https://ok.ru/group/53539619995791" target="_blank" class="ok"></a>
+                    </div>
                 </aside>
                 <!-- /site__aside -->
 
+            </div>
+
+            <div class="social-list">
+                <a href="https://vk.com/algomru" target="_blank" class="vk"></a>
+                <a href="https://www.facebook.com/algomru/" target="_blank" class="fb"></a>
+                <a href="https://ok.ru/group/53539619995791" target="_blank" class="ok"></a>
             </div>
 
         </div>
