--- a/app/algom-subscription.html
+++ b/app/algom-subscription.html
@@ -33,7 +33,7 @@
                 <!-- site__header-cooperation -->
                 <div class="site__header-cooperation">
 
-                    <span>В сотрудничестве</span>
+                    <span>в сотрудничестве</span>
 
                     <div><img src="pic/company1.png" width="154" height="18" alt=""></div>
                     <div><img src="pic/company2.png" width="114" height="44" alt=""></div>
