mobiles view doing

--- a/app/algom-demo2.html
+++ b/app/algom-demo2.html
@@ -17,9 +17,6 @@
     <!-- site -->
     <div class="site">
 
-        <a href="#" class="site__print"><span>Распечатать</span></a>
-        <a href="#" class="site__download"><span>Скачать PDF</span></a>
-
         <!-- site__header -->
         <header class="site__header">
 
@@ -71,6 +68,13 @@
 
                 <!-- content -->
                 <div class="content">
+
+                    <!-- site__buttons -->
+                    <div class="site__buttons">
+                        <a href="#" class="site__print"><span>Распечатать</span></a>
+                        <a href="#" class="site__download"><span>Скачать PDF</span></a>
+                    </div>
+                    <!-- /site__buttons -->
 
                     <!-- single-post -->
                     <article class="single-post">
@@ -443,12 +447,21 @@
                         <!--&lt;!&ndash; /search-results &ndash;&gt;-->
 
                     </div>
-
+                    <div class="social-list">
+                        <a href="https://vk.com/algomru" target="_blank" class="vk"></a>
+                        <a href="https://www.facebook.com/algomru/" target="_blank" class="fb"></a>
+                        <a href="https://ok.ru/group/53539619995791" target="_blank" class="ok"></a>
+                    </div>
                 </aside>
                 <!-- /site__aside -->
 
             </div>
 
+            <div class="social-list">
+                <a href="https://vk.com/algomru" target="_blank" class="vk"></a>
+                <a href="https://www.facebook.com/algomru/" target="_blank" class="fb"></a>
+                <a href="https://ok.ru/group/53539619995791" target="_blank" class="ok"></a>
+            </div>
         </div>
         <!-- /site__content -->
 
